# lcjoin

./: .gitignore  README.md  main.py
cpp/: CMakeLists.txt
cpp/include/: defs.hpp  input.hpp  lib.hpp  trie.hpp
cpp/src/: CMakeLists.txt  lcjoin.cpp  treebased.cpp
python/: requirements.txt
python/src/lcjoin/: lib.py  main.py
