cmake_minimum_required(VERSION 3.19)
project(LCJoin
        VERSION 0.1
        DESCRIPTION "Set containment"
        LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)

include(FetchContent)

# CXX options library
FetchContent_Declare(
        cxxopts
        GIT_REPOSITORY https://github.com/jarro2783/cxxopts.git
        GIT_TAG        v2.2.1
)
FetchContent_MakeAvailable(cxxopts)
# Adds cxxopts

# Formatting library
FetchContent_Declare(
        fmt
        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
        GIT_TAG        7.1.2
)
FetchContent_MakeAvailable(fmt)
# Adds fmt::fmt

add_subdirectory(src)